--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,24 +1,17 @@
-<!-- <section class="footer">
-   <div class="container footer-container">
-
-      <span>منصة تواصل بين المرضى و المتبرعين بالدم عبر </span>
-      <span style="font-size: 1.4em; color: #fff;"> SMS </span>
-
-   </div>
-</section> -->
-<!-- Footer -->
-
-<footer class="white-section" id="footer">
-   <div class="container-fluid">
-      <i class="social-icon fab fa-facebook-f"></i>
-      <i class="social-icon fab fa-twitter"></i>
-      <i class="social-icon fab fa-instagram"></i>
-      <i class="social-icon fas fa-envelope"></i>
-      <p>© Copyright 2018 TinDog</p>
+<footer class="footer" id="footer">
+   <div class="container-fluid text-center">
+      <i class="social-icon fab fa-facebook-f pl-1 pr-1"></i>
+      <i class="social-icon fab fa-twitter pl-1 pr-1"></i>
+      <i class="social-icon fab fa-instagram pl-1 pr-1"></i>
+      <i class="social-icon fas fa-envelope pl-1 pr-1"></i>
+      <p>منصة تواصل بين المرضى و المتبرعين بالدم عبر
+         <span> SMS </span></p>
    </div>
 </footer>
 <%- include("captchajs") -%>
-</div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
 </body>
 
 </html>
