--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,43 +9,57 @@
    <title>منصة تبرع</title>
    <link href='/imgs/blood-drop.png' rel='icon' type='image/x-icon' />
 
-   <!-- Bootstrap core CSS -->
+   <!-- Bootstrap,google fonts core CSS -->
    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
    <link href="https://fonts.googleapis.com/css?family=Cairo:400,900&amp;subset=arabic" rel="stylesheet">
+
+   <!-- Font awesome -->
    <link href="css/all.css" rel="stylesheet">
-   <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.0/css/all.css" integrity="sha384-Mmxa0mLqhmOeaE8vgOSbKacftZcsNYDjQzuCOm6D02luYSzBG8vpaOykv9lFQ51Y" crossorigin="anonymous">
- -->
+   <!--link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.0/css/all.css" integrity="sha384-Mmxa0mLqhmOeaE8vgOSbKacftZcsNYDjQzuCOm6D02luYSzBG8vpaOykv9lFQ51Y" crossorigin="anonymous"-->
+
    <!-- Custom styles for this template -->
    <link href="css/main.css" rel="stylesheet">
-   <!-- Custom scripts for this template -->
-   <script type='text/javascript' src='http://code.jquery.com/jquery-1.11.0.js'></script>
-   <script type='text/javascript' src="https://rawgit.com/RobinHerbots/jquery.inputmask/3.x/dist/jquery.inputmask.bundle.js"></script>
+
+   <!--    <script type="text/javascript" src="jquery-3.3.1.min.js"></script> -->
+   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+   <script src="https://rawgit.com/RobinHerbots/jquery.inputmask/3.x/dist/jquery.inputmask.bundle.js"></script>
+
    <script type="text/javascript" src="js/main.js"></script>
+   <!-- scripts frameworks -->
+   <!-- Custom scripts for this template -->
 
 </head>
 
 <body>
-   <section class="header">
-      <div class="container header-container">
+   <div class="header">
+      <div class="container-fluid  ">
 
-         <nav class="nav">
-            <a class="navbar-brand  " href="/" style="padding-left:15px;">
-               <strong>تبرع</strong>
-            </a>
-            <% if ( _connected===true ){ console.log("user connected"); %>
-            <% if ( _userType==="donor" ){ console.log("donor"); %>
-            <a class="nav-link" href="/donorstate">الرئسية</a>
-            <% } else {  console.log("patient");  %>
-            <a class="nav-link" href="/addrequest">الرئسية</a>
-            <% } %>
-            <a class="nav-link" href="/userprofile">تحديث المعلومات </a>
-            <% } else {  console.log("user not connected"); %>
-            <a class="nav-link" href="/"> الدخول</a>
-            <a class="nav-link" href="/signin">تسجيل</a>
-            <a class="nav-link" href="/getcode">استرجاع الكود</a>
-            <% } %>
-            <a class="nav-link" href="/contactus">اتصل بنا</a>
+         <nav class="navbar navbar-expand-md navbar-light  ">
+            <a class="navbar-brand  " href="/"> <strong>تبرع</strong> </a>
+
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+               <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+               <ul class="navbar-nav">
+                  <% if ( _connected===true ){ console.log("user connected"); %>
+                  <% if ( _userType==="D" ){ console.log("donor"); %>
+                  <li class="nav-item"> <a class="nav-link" href="/donorstate">الرئسية</a></li>
+                  <% } else if ( _userType==="P" ){  console.log("patient");  %>
+                  <li class="nav-item"><a class="nav-link" href="/addrequest">الرئسية</a></li>
+                  <% } %>
+                  <li class="nav-item"><a class="nav-link" href="/userprofile">تحديث المعلومات </a></li>
+                  <li class="nav-item"><a class="nav-link" href="/contactus">اتصل بنا</a></li>
+                  <li class="nav-item"><a class="nav-link" href="/logout">خروج </a></li>
+                  <% } else {  console.log("user not connected"); %>
+                  <li class="nav-item"><a class="nav-link" href="/"> الدخول</a></li>
+                  <li class="nav-item"><a class="nav-link" href="/signin">تسجيل</a></li>
+                  <li class="nav-item"><a class="nav-link" href="/getcode">استرجاع الكود</a></li>
+                  <li class="nav-item"><a class="nav-link" href="/contactus">اتصل بنا</a></li>
+                  <% } %>
+
+               </ul>
+            </div>
          </nav>
-
       </div>
-   </section>
+   </div>
