--- a/views/partials/wilaya.ejs
+++ b/views/partials/wilaya.ejs
@@ -1,54 +1,58 @@
 <!--  <div class=" label ">ولاية الاقامة حاليا</div> -->
-<div class="select">
-   <span class="fas fa-map-marker   select-icon"></span>
-   <select dir="rtl" name="wilaya" class="mdb-select  md-form colorful-select dropdown-primary ">
-      <option value="01">01-ولاية أدرار</option>
-      <option value="02">02-ولاية الشلف</option>
-      <option value="03">03-ولاية الأغواط</option>
-      <option value="04">04-ولاية أم البواقي</option>
-      <option value="05">05-ولاية باتنة</option>
-      <option value="06">06-ولاية بجاية</option>
-      <option value="07">07-ولاية بسكرة</option>
-      <option value="08">08-ولاية بشار</option>
-      <option value="09">09-ولاية البليدة</option>
-      <option value="10">10-ولاية البويرة</option>
-      <option value="11">11-ولاية تمنراست</option>
-      <option value="12">12-ولاية تبسة</option>
-      <option value="13">13-ولاية تلمسان</option>
-      <option value="14">14-ولاية تيارت</option>
-      <option value="15">15-ولاية تيزي وزو</option>
-      <option value="16">16-ولاية الجزائر العاصمة</option>
-      <option value="17">17-ولاية الجلفة</option>
-      <option value="18">18-ولاية جيجل</option>
-      <option value="19">19-ولاية سطيف</option>
-      <option value="20">20-ولاية سعيدة</option>
-      <option value="21">21-ولاية سكيكدة</option>
-      <option value="22">22-ولاية سيدي بلعباس</option>
-      <option value="23">23-ولاية عنابة</option>
-      <option value="24">24-ولاية قالمة</option>
-      <option value="25">25-ولاية قسنطينة</option>
-      <option value="26">26-ولاية المدية</option>
-      <option value="27">27-ولاية مستغانم</option>
-      <option value="28">28-ولاية المسيلة</option>
-      <option value="29">29-ولاية معسكر</option>
-      <option value="30">30-ولاية ورقلة</option>
-      <option value="31">31-ولاية وهران</option>
-      <option value="32">32-ولاية البيض</option>
-      <option value="33">33-ولاية إليزي</option>
-      <option value="34">34-ولاية برج بوعريريج</option>
-      <option value="35">35-ولاية بومرداس</option>
-      <option value="36">36-ولاية الطارف</option>
-      <option value="37">37-ولاية تندوف</option>
-      <option value="38">38-ولاية تيسمسيلت</option>
-      <option value="39">39-ولاية الوادي</option>
-      <option value="40">40-ولاية خنشلة</option>
-      <option value="41">41-ولاية سوق أهراس</option>
-      <option value="42">42-ولاية تيبازة</option>
-      <option value="43">43-ولاية ميلة</option>
-      <option value="44">44-ولاية عين الدفلى</option>
-      <option value="45">45-ولاية النعامة</option>
-      <option value="46">46-ولاية عين تموشنت</option>
-      <option value="47">47-ولاية غرداية</option>
-      <option value="48">48-ولاية غليزان</option>
-   </select>
+
+<div class="input-group mb-3 ">
+   <div class="input-group-prepend  w-100">
+      <select dir="rtl" name="wilaya" class="custom-select custom-select-md  md-form colorful-select dropdown-primary  ">
+         <option value="01">01-ولاية أدرار</option>
+         <option value="02">02-ولاية الشلف</option>
+         <option value="03">03-ولاية الأغواط</option>
+         <option value="04">04-ولاية أم البواقي</option>
+         <option value="05">05-ولاية باتنة</option>
+         <option value="06">06-ولاية بجاية</option>
+         <option value="07">07-ولاية بسكرة</option>
+         <option value="08">08-ولاية بشار</option>
+         <option value="09">09-ولاية البليدة</option>
+         <option value="10">10-ولاية البويرة</option>
+         <option value="11">11-ولاية تمنراست</option>
+         <option value="12">12-ولاية تبسة</option>
+         <option value="13">13-ولاية تلمسان</option>
+         <option value="14">14-ولاية تيارت</option>
+         <option value="15">15-ولاية تيزي وزو</option>
+         <option value="16">16-ولاية الجزائر العاصمة</option>
+         <option value="17">17-ولاية الجلفة</option>
+         <option value="18">18-ولاية جيجل</option>
+         <option value="19">19-ولاية سطيف</option>
+         <option value="20">20-ولاية سعيدة</option>
+         <option value="21">21-ولاية سكيكدة</option>
+         <option value="22">22-ولاية سيدي بلعباس</option>
+         <option value="23">23-ولاية عنابة</option>
+         <option value="24">24-ولاية قالمة</option>
+         <option value="25">25-ولاية قسنطينة</option>
+         <option value="26">26-ولاية المدية</option>
+         <option value="27">27-ولاية مستغانم</option>
+         <option value="28">28-ولاية المسيلة</option>
+         <option value="29">29-ولاية معسكر</option>
+         <option value="30">30-ولاية ورقلة</option>
+         <option value="31">31-ولاية وهران</option>
+         <option value="32">32-ولاية البيض</option>
+         <option value="33">33-ولاية إليزي</option>
+         <option value="34">34-ولاية برج بوعريريج</option>
+         <option value="35">35-ولاية بومرداس</option>
+         <option value="36">36-ولاية الطارف</option>
+         <option value="37">37-ولاية تندوف</option>
+         <option value="38">38-ولاية تيسمسيلت</option>
+         <option value="39">39-ولاية الوادي</option>
+         <option value="40">40-ولاية خنشلة</option>
+         <option value="41">41-ولاية سوق أهراس</option>
+         <option value="42">42-ولاية تيبازة</option>
+         <option value="43">43-ولاية ميلة</option>
+         <option value="44">44-ولاية عين الدفلى</option>
+         <option value="45">45-ولاية النعامة</option>
+         <option value="46">46-ولاية عين تموشنت</option>
+         <option value="47">47-ولاية غرداية</option>
+         <option value="48">48-ولاية غليزان</option>
+      </select>
+      <span class="input-group-text    form-icon"><i class="fas fa-map-marker   mr-auto ml-auto"></i></span>
+
+   </div>
 </div>
