--- a/views/partials/captcha.ejs
+++ b/views/partials/captcha.ejs
@@ -1,1 +1,7 @@
-<input class="jCaptcha form-control  " class="form-control   " type="text" placeholder="مجموع العددين يساوى ؟" maxlength="3">
+ 
+ <!--      <input class="form-control jCaptcha"   type="text" placeholder="مجموع العددين يساوى ؟" maxlength="3">
+ -->
+
+
+      <input class="form-control jCaptcha" type="text" placeholder="مجموع العددين يساوى ؟" maxlength="3">
+    
