--- a/views/politics.ejs
+++ b/views/politics.ejs
@@ -5,7 +5,7 @@
          <h1>منصة تبرع</h1>
          <h3> صِلَة المرضى بالمتبرعين بالدم</h3>
       </div>
-      <form class="form-sign  ">
+      <form class="form  ">
          <h5 class="form-title "> سياسة الموقع </h5>
          <input type="tel" id="tel" lang="en" dir="ltr" class="form-control " placeholder="رقم الهاتف" required autocomplete="off" autofocus onfocus="this.value=''">
          <%- include("partials/captcha") -%>
