--- a/views/donorstate.ejs
+++ b/views/donorstate.ejs
@@ -23,14 +23,14 @@
             </div>
             <%- include("partials/wilaya") -%>
             <div class="input-group mb-3">
-               <input type="text" dir="ltr" class="form-control  text-right" id="adress" name="adress" placeholder="حدد مكان تواجدك: المشفى,..." required autocomplete="off" onfocus="this.value=''" maxlength="30">
+               <input type="text" dir="ltr" class="form-control  text-right" id="adress" name="adress" placeholder="حدد مكان تواجدك:  ,..." required autocomplete="off" onfocus="this.value=''" maxlength="30">
                <div class="input-group-prepend">
                   <span class="input-group-text    form-icon"><i class="fas fa-map-marker-alt   mr-auto ml-auto"></i></span>
                </div>
             </div>
 
             <%- include("partials/captcha") -%>
-            <button class="btn btn-danger btn-block" type="submit">دخول</button>
+            <button class="btn btn-danger btn-block" type="submit">تعديل</button>
          </form>
       </div>
    </div>
